--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Home | Grocery Store</title>
   <!-- Link to the external CSS file -->
-  <link rel="stylesheet" href="/CSS/index.css">
+  <link rel="stylesheet" href="./CSS/index.css">
 </head>
 <body>
   <!-- Navigation Bar -->
